# gaudip

./: .gitignore  Cargo.toml
crates/rope/: Cargo.toml  LICENSE  README.md
crates/rope/src/: gap_buffer.rs  lib.rs  metrics.rs  piece.rs  piece_tree.rs  rb_base.rs  redblack.rs  rope.rs  roperig.rs  roperig_test.rs  slab.rs  string.rs
