[package]
name = "roperig"
license = "MIT"
version = "0.1.0"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
edition.workspace = true

[features]
default = ["rope"]
rope = []

[dependencies]
slab = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }