[package]
name = "roperig"
license = "MIT"
version = "0.1.0"
authors = [
    "gudzpoz <gudzpoz@live.com>",
    "Sevag Hanssian <sevag.hanssian@gmail.com>",
]
edition.workspace = true

[features]
default = ["gap-buffer", "piece-tree", "rope"]
gap-buffer = []
piece-tree = []
rope = []

[dependencies]
slab = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }